--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,8 @@ MONGODB_URI=mongodb+srv://himajov:UoSFRxBJqzQFEMsg@cluster0.bkncovq.mongodb.net/
 
 PORT=5001
 
+JWT_SECRET=mysecretkey
+
+NODE_ENV=development
 
 # glib_chat_db is the database name
